plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco' //to generate report of coverall
}



group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

jacocoTestReport {
	dependsOn test // Asegura que los tests corran antes
	reports {
		xml.required = true
		html.required = true
	}
	afterEvaluate {
		classDirectories.setFrom(files(classDirectories.files.collect {
			fileTree(dir: it, exclude: [
					'com/example/base/*/infrastructure/dto/**',
					'com/example/base/*/infrastructure/persistence/entity/**',
					'com/example/base/UserApplication.class'
			])
		}))
	}
}

test {
	finalizedBy jacocoTestReport
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	//implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'io.projectreactor.netty:reactor-netty-http'
	implementation 'org.springframework.security:spring-security-crypto'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	// Cargar variables de .env
	implementation 'io.github.cdimascio:java-dotenv:5.2.2'

	implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.0'
	// OpenAPI / Swagger - Versión compatible con Spring Boot 3.4.2
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'

	//testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation "org.testcontainers:postgresql:1.19.0"
	testImplementation "org.testcontainers:junit-jupiter:1.19.0"
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.mockito:mockito-inline:5.2.0'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'


	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

	// Si usas Lombok, asegúrate de que el processor de MapStruct
	// esté DESPUÉS del de Lombok para que pueda leer los getters/setters
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'


	// MapStruct
	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

	// Si usas Lombok, es CRÍTICO añadir esto para que MapStruct vea los Getters/Setters
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs("-XX:+EnableDynamicAgentLoading", "-Xshare:off")
}
